tdf#65788: svg export - put transform attribute into text element

if transform is put into an inner tspan element rotated text isn't rendered rotated

Change-Id: I6fcab1db0e213c65fe8ba88a7694fd10c902bfec